` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/FailWorkflowStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title FailWorkflow State Transitions

[*] --> CREATED
CREATED --> FAIL_WORKFLOW_COMMAND_CREATED: SCHEDULE
FAIL_WORKFLOW_COMMAND_CREATED --> FAIL_WORKFLOW_COMMAND_CREATED: FAIL_WORKFLOW_EXECUTION
FAIL_WORKFLOW_COMMAND_CREATED --> FAIL_WORKFLOW_COMMAND_RECORDED: WORKFLOW_EXECUTION_FAILED
FAIL_WORKFLOW_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
